--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <td>  <img src="photo-modified.png" alt="kshitiz's photo"></td>
       <td><h1>kshitiz</h1>
     <p>
-    <em>student of shollini university and <a href="https://www.shiksha.com/engineering/computer-science-engineering-chp"><strong>a computer science engineer</strong></a>
+    <em>student of shoolini university and <a href="https://www.shiksha.com/engineering/computer-science-engineering-chp"><strong>a computer science engineer</strong></a>
 
     </em>
     <p>
-      i am student of shollini university<br>
-      currently i am persuing my engieering <br>
+      i am student of shoolini university<br>
+      currently i am persuing my engineering <br>
        degree in ai and machine learning   <br>
        i am interested in working an ai and<br>
-       and machine learning and self driving cars<br>
+       machine learning and self driving cars<br>
        and using ml to help people.<br>
     </p>
   </p>
